# llm-eval-harness

./: .env.example  .gitignore  README.md  RESULTS.md  dashboard.py  pyproject.toml
.github/workflows/: ci.yml
data/: ai_engineering.json  industry_mlops.json  sample_qa.json
examples/: my_metrics.py
src/: config.py  regression.py  runner.py
src/evaluators/: __init__.py  claude_evaluator.py
src/loaders/: __init__.py  dataset.py
src/scorers/: __init__.py  custom_metrics.py  ragas_scorer.py
tests/: test_claude_evaluator.py  test_custom_metrics.py  test_dataset_loader.py  test_ragas_scorer.py  test_regression.py  test_runner.py
