[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Cloud-native LLM evaluation harness with Claude API, Langfuse tracing, and RAGAS scoring"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.42.0",
    "langfuse>=2.0.0",
    "ragas>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "litellm>=1.0.0",
    "eval-type-backport>=0.2.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
